Refactor tests and update service logic for returns and sales
Refactored imports and mock setups in test classes for better clarity and maintainability. Updated test data initialization to use local variables and Collections.singletonList/List.of instead of Arrays.asList where appropriate. Adjusted service and test logic to use getFirst() instead of get(0) for list access. Updated ReturnsService to use the saved return entity for DTO conversion. Added UserServiceClient mocks to relevant tests to replace AuthUtils. Improved test coverage and consistency across service and controller tests.