@@ -1,32 +1,11 @@
 package lk.udcreations.sale.service;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.modelmapper.ModelMapper;
-
 import lk.udcreations.common.dto.inventory.StockDTO;
 import lk.udcreations.common.dto.returns.CreateReturnDTO;
 import lk.udcreations.common.dto.returns.ReturnDTO;
 import lk.udcreations.common.dto.salesitems.SalesItemDTO;
+import lk.udcreations.common.dto.user.UsersDTO;
+import lk.udcreations.sale.config.UserServiceClient;
 import lk.udcreations.sale.controller.ProductClientController;
 import lk.udcreations.sale.entity.Returns;
 import lk.udcreations.sale.entity.Sales;
@@ -35,6 +14,23 @@ import lk.udcreations.sale.exception.NotFoundException;
 import lk.udcreations.sale.repository.ReturnsRepository;
 import lk.udcreations.sale.repository.SalesItemsRepository;
 import lk.udcreations.sale.repository.SalesRepository;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+import org.modelmapper.ModelMapper;
+
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
 
 class ReturnsServiceTest {
 
@@ -53,6 +49,9 @@ class ReturnsServiceTest {
     @Mock
     private ModelMapper modelMapper;
 
+    @Mock
+    private UserServiceClient userServiceClient;
+
     @InjectMocks
     private ReturnsService returnsService;
 
@@ -64,6 +63,11 @@ class ReturnsServiceTest {
     void setUp() {
         MockitoAnnotations.openMocks(this);
 
+        // Mock a logged-in admin user
+        Integer adminUserId = 999;
+        UsersDTO mockUser = new UsersDTO();
+        mockUser.setUserId(adminUserId);
+        
         // Mock Sale
         mockSale = new Sales();
         mockSale.setSaleId(1);
@@ -94,16 +98,20 @@ class ReturnsServiceTest {
         // Mock repository methods
         when(salesRepository.findById(1)).thenReturn(Optional.of(mockSale));
         when(salesItemsRepository.findById(1)).thenReturn(Optional.of(mockSalesItem));
-        when(salesItemsRepository.findBySaleId(1)).thenReturn(Arrays.asList(mockSalesItem));
-        when(returnsRepository.findBySaleId(1)).thenReturn(Arrays.asList(mockReturn));
+        when(salesItemsRepository.findBySaleId(1)).thenReturn(Collections.singletonList(mockSalesItem));
+        when(returnsRepository.findBySaleId(1)).thenReturn(Collections.singletonList(mockReturn));
+
+        // Mock authUtils methods
+        when(userServiceClient.getUserById(adminUserId)).thenReturn(mockUser);
+        String adminUsername = "admin";
+        when(userServiceClient.getUserDetails(adminUsername)).thenReturn(mockUser);
 
         // Mock modelMapper
         when(modelMapper.map(any(), any())).thenAnswer(invocation -> {
             Object source = invocation.getArgument(0);
             Class<?> targetClass = invocation.getArgument(1);
 
-            if (source instanceof Returns && targetClass == ReturnDTO.class) {
-                Returns returnEntity = (Returns) source;
+            if (source instanceof Returns returnEntity && targetClass == ReturnDTO.class) {
                 ReturnDTO dto = new ReturnDTO();
                 dto.setReturnId(returnEntity.getReturnId());
                 dto.setSaleId(returnEntity.getSaleId());
@@ -114,8 +122,7 @@ class ReturnsServiceTest {
                 dto.setRefundAmount(returnEntity.getRefundAmount());
                 dto.setReturnDate(returnEntity.getReturnDate());
                 return dto;
-            } else if (source instanceof SalesItems && targetClass == SalesItemDTO.class) {
-                SalesItems item = (SalesItems) source;
+            } else if (source instanceof SalesItems item && targetClass == SalesItemDTO.class) {
                 SalesItemDTO dto = new SalesItemDTO();
                 dto.setSalesItemId(item.getSalesItemId());
                 dto.setSaleId(item.getSaleId());
@@ -150,13 +157,13 @@ class ReturnsServiceTest {
         // Assert
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(1, result.get(0).getReturnId());
-        assertEquals(1, result.get(0).getSaleId());
+        assertEquals(1, result.getFirst().getReturnId());
+        assertEquals(1, result.getFirst().getSaleId());
         // ReturnDTO doesn't have getSalesItemId method
         // Instead, we can check other properties
-        assertEquals(1, result.get(0).getQuantity());
-        assertEquals("Defective product", result.get(0).getReason());
-        assertEquals(new BigDecimal("50.00"), result.get(0).getRefundAmount());
+        assertEquals(1, result.getFirst().getQuantity());
+        assertEquals("Defective product", result.getFirst().getReason());
+        assertEquals(new BigDecimal("50.00"), result.getFirst().getRefundAmount());
         verify(productClientController, times(1)).addStock(any(Integer.class), any(StockDTO.class));
         verify(salesRepository, times(1)).save(any(Sales.class));
         verify(salesItemsRepository, times(1)).save(any(SalesItems.class));
@@ -224,7 +231,7 @@ class ReturnsServiceTest {
     @Test
     void testGetReturnsBySaleId() {
         // Arrange
-        when(returnsRepository.findBySaleId(1)).thenReturn(Arrays.asList(mockReturn));
+        when(returnsRepository.findBySaleId(1)).thenReturn(Collections.singletonList(mockReturn));
 
         // Act
         List<ReturnDTO> result = returnsService.getReturnsBySaleId(1);
@@ -232,8 +239,8 @@ class ReturnsServiceTest {
         // Assert
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(1, result.get(0).getReturnId());
-        assertEquals(1, result.get(0).getSaleId());
+        assertEquals(1, result.getFirst().getReturnId());
+        assertEquals(1, result.getFirst().getSaleId());
         verify(returnsRepository, times(1)).findBySaleId(1);
     }
 }
